--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <!--------------------------------------------Aqui ira codigoo------------------------------------------>
 
+    <div class="hola">
+        <p id="main"> Hola soy main</p>
+    </div>
+
+    <div class="Adios">
+        <p> HolaMundo!!!!!</p>
+    </div>
+
+    <!--------------------------------------------Aqui ira codigoo------------------------------------------>
+</body>
+</html>
