--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!--------------------------------------------Aqui ira codigoo------------------------------------------>
 
     <div class="hola">
-        <p id="main"> Hola soy main</p>
+        <p id="Imrane">Hola soy Imrane</p>
     </div>
 
     <div class="Adios">
-        <p> HolaMundo!!!!!</p>
+        <p>HolaMundo!!!!!</p>
     </div>
 
     <!--------------------------------------------Aqui ira codigoo------------------------------------------>
