--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
     <!--------------------------------------------Aqui ira codigoo------------------------------------------>
 
     <div class="hola">
-        <p id="Imrane">Hola soy Imrane</p>
+        <p id="main">Hola soy main</p>
     </div>
 
     <div class="Adios">
         <p>HolaMundo!!!!!</p>
     </div>
 
-    <div class="Buenas tardes">
-        <p>este es contenido añadido por Imrane</p>
-    </div>
+    
 
     <!--------------------------------------------Aqui ira codigoo------------------------------------------>
 </body>
