--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
     <div class="hola">
         <p id="main">Hola soy main</p>
+        <p id="main2">Cambios hechos en el main</p>
     </div>
 
     <div class="Adios">
         <p>HolaMundo!!!!!</p>
     </div>
 
-    
+
 
     <!--------------------------------------------Aqui ira codigoo------------------------------------------>
 </body>
