--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--------------------------------------------Aqui ira codigoo------------------------------------------>
 
     <div class="hola">
+        <p id="main">Hola soy main</p>
         <p id="Imrane">Hola soy Imrane</p>
     </div>
 
